--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
         </p>
     </section>
 
-    <footer>Site ccriado por <a href="https://gustavoguanabara.github.io" target="_blank">gustavo guanabara</a>para o <a href="https://www.cursoemvideo.com" target="_blank">curso  em video</a></footer>
+    <footer>Site:"Projeto cordel" exercío ensinado por <a href="https://gustavoguanabara.github.io" target="_blank">gustavo guanabara </a>para o <a href="https://www.cursoemvideo.com" target="_blank">curso  em video</a></footer>
 </body>
 </html>
